# rust-app-template

./: .gitignore  Cargo.toml  README.md  Secrets.toml  http.http  schema.sql
.cargo/: config.toml
src/: main.rs
src/api/: auth.rs  chat.rs  mod.rs  nats.rs  public.rs  user.rs
src/chatserver/: handler.rs  mod.rs  server.rs  types.rs
src/handlers/: mod.rs
src/handlers/auth/: get_user.rs  get_users.rs  logout.rs  mod.rs
src/handlers/chat/: mod.rs
src/handlers/file/: mod.rs
src/handlers/nats/: mod.rs
src/handlers/public/: login.rs  mod.rs  register.rs
src/handlers/users/: add_user.rs  delete_user.rs  get_user.rs  get_users.rs  mod.rs
src/middleware/: auth.rs
src/models/: auth.rs  errors.rs  message.rs  mod.rs  room.rs  state.rs  user.rs
src/utils/: db.rs  guard.rs  jwt.rs  mod.rs  queue.rs
src/utils/sqlite/: message.rs  mod.rs  room.rs  user.rs
